# Dobot-ROS

./: readme.txt
Milestone7/: Makefile
Milestone7/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Milestone7/devel/include/dobot/: CartesianSimple.h  PTPCommand.h  SetHOMECmd.h  SetHOMECmdRequest.h  SetPTPCmd.h  SetPTPCmdRequest.h  SetWAITCmd.h  SetWAITCmdRequest.h
Milestone7/devel/lib/display/: JointVisualsConverter
Milestone7/devel/lib/dobot/: PTPCommandClient  PTPGoalListener  PosePublisher
Milestone7/devel/lib/pkgconfig/: display.pc  dobot.pc
Milestone7/devel/lib/python2.7/dist-packages/dobot/msg/: _CartesianSimple.py  _PTPCommand.py  __init__.py
Milestone7/devel/share/display/cmake/: displayConfig.cmake
Milestone7/devel/share/dobot/cmake/: dobot-msg-extras.cmake  dobot-msg-paths.cmake  dobotConfig.cmake
Milestone7/devel/share/gennodejs/ros/dobot/msg/: _index.js  (+2 more)
Milestone7/devel/share/roseus/ros/dobot/: manifest.l
Milestone7/src/display/: CMakeLists.txt  package.xml
Milestone7/src/display/config/: dobot_tf_only.rviz
Milestone7/src/display/launch/: gui_visualise.launch  inspect_urdf.launch  inspect_visuals_urdf.launch  joint_goal.launch
Milestone7/src/display/src/: joint_goal_publisher.cpp  joint_visuals_converter.cpp
Milestone7/src/display/urdf/: dobot.urdf  dobot_visuals.urdf
Milestone7/src/dobot/: CMakeLists.txt  package.xml
Milestone7/src/dobot/launch/: dobot_server.launch
Milestone7/src/dobot/msg/: PTPCommand.msg
Milestone7/src/dobot/src/: DobotServer.cpp  pose_publisher.cpp  ptp_command_client.cpp  ptp_goal_listener.cpp
(+12 files in other folders)
